apps/rustfs/overlays/prod/ingress-routes.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustfs-prod-console
  namespace: rustfs-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rustfs.home.nerdylyonsden.io`)
      kind: Rule
      services:
        - name: rustfs-prod-svc
          port: 9001
  tls:
    secretName: prod-apps-certificate-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustfs-prod-s3
  namespace: rustfs-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rustfs-s3.home.nerdylyonsden.io`)
      kind: Rule
      services:
        - name: rustfs-prod-svc
          port: 9000
  tls:
    secretName: prod-apps-certificate-secret
